<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mg_8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cl_area_name"
            android:textColor="@color/black"
            android:textSize="@dimen/mg_16" />

        <EditText
            android:id="@+id/dialog_area_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mg_24"
            android:layout_marginEnd="@dimen/mg_24"
            android:hint="?attr/app_name"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_area_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mg_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cl_area_add_longitude"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/cl_area_add_latitude"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/cl_area_add_address"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</LinearLayout>

