<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tuya.smart.commercial.lighting.demo.pages.area.view.AreaIndexActivity">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />

    <Button
        android:id="@+id/btn_create_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mg_16"
        android:text="@string/cl_area_add_new_area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_area_list"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mg_16"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cl_area_index_list"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/btn_area_level_list"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mg_16"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cl_area_index_level_list"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_bdbdbd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_area_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_area_level_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>